# Quaddle_2.0.2

./: README.md
AspectRatioDev/: FunctionsList.ms  Main_Script.ms  Modify_AspectRatios.ms  Script_TakePics.ms  Test_Driver_Viewer.max
AspectRatioDev/Assets & Object Table/: myObjectTable.txt
Character Development/: Character_Testing.max
Hat Dev/: Functions_List.ms  Main_Script.ms  Script_AlternativeArms.ms
Hat Dev/Patterns and Object Table/: object_table.txt
Hat Dev/images/fbxFiles/: Body(Oblong)+Colour(More_Orange)+Pattern(Checkered)+Arm_Angle(Bent_Down)+Hat(Oblong).fbx  (+15 more)
Making Objects/: BrainStorming.max
Notes/: BrainStorming.docx  Meeting.txt  Moving Forward.txt  Quaddle_Update.docx
ObjectTableGenerator/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
Quaddle_Generator/Assets/: Asset Data.txt
Quaddle_Generator/Scripts/: Helper_Functions.ms  Main_Script.ms  QuaddleConstructor.ms  Script_AlternativeArms.ms  Script_CubicBody.ms  Script_CustomPyramidBody.ms  Script_Initialization.ms  Script_OblongBody.ms  Script_PepperBody.ms  Script_PyramidalBody.ms  Script_SphericalArms.ms  Script_TakePics.ms
Quaddle_Generator/Test Driver/Assets/: Asset Data.txt
Quaddle_Generator/User/: Asset Data.txt  Object Table.txt  Preferences.txt  obtmp.txt
Quaddle_Generator/fbxFiles/: Oblong + 7070059 + 5050194 + DStripes + 7 + Pointed + Bent_Up + Oblong + 7070059 + 5050194 + DStripes.fbx
Test Driver/: FunctionsList.ms  Main_Script.ms  Script_AlternativeArms.ms  Test_Driver_Viewer.max
Test Driver/Patterns and Object Table/: myObjectTable.txt  object_table.txt
(+449 files in other folders)
